// Copyright 2017 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package crimson;

import "go.chromium.org/luci/machine-db/api/crimson/v1/datacenters.proto";
import "go.chromium.org/luci/machine-db/api/crimson/v1/oses.proto";
import "go.chromium.org/luci/machine-db/api/crimson/v1/platforms.proto";
import "go.chromium.org/luci/machine-db/api/crimson/v1/racks.proto";
import "go.chromium.org/luci/machine-db/api/crimson/v1/switches.proto";
import "go.chromium.org/luci/machine-db/api/crimson/v1/vlans.proto";

// Crimson implements the Crimson service.
service Crimson {
  // GetDatacenters retrieves datacenters.
  rpc GetDatacenters(DatacentersRequest) returns (DatacentersResponse);
  // GetOSes retrieves operating systems.
  rpc GetOSes(OSesRequest) returns (OSesResponse);
  // GetPlatforms retrieves platforms.
  rpc GetPlatforms(PlatformsRequest) returns (PlatformsResponse);
  // GetRacks retrieves racks.
  rpc GetRacks(RacksRequest) returns (RacksResponse);
  // GetSwitches retrieves switches.
  rpc GetSwitches(SwitchesRequest) returns (SwitchesResponse);
  // GetVLANs retrieves vlans.
  rpc GetVLANs(VLANsRequest) returns (VLANsResponse);
}
