// Copyright 2017 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package crimson;

// RacksRequest is a request to retrieve racks.
message RacksRequest {
  // The names of racks to retrieve.
  repeated string names = 1;
  // The datacenters to filter retrieved racks on.
  repeated string datacenters = 2;
}

// Rack describes a rack.
message Rack {
  // The name of this rack. Uniquely identifies this rack.
  string name = 1;
  // A description of this rack.
  string description = 2;
  // The datacenter this rack belongs to.
  string datacenter = 3;
}

// RacksResponse is a response to a request to retrieve racks.
message RacksResponse {
  // The racks matching the request.
  repeated Rack racks = 1;
}
